enable PDF, doc class krantz

--- a/02-getting-started.Rmd
+++ b/02-getting-started.Rmd
@@ -6,7 +6,7 @@ Here is the first paragraph of a 2009 article in the *Journal of Experimental Ps
 
 In this paragraph, the researcher has identified a research question—about the effect of using human figure drawings on the accuracy of children’s memories of being touched—and begun to make an argument for why it is interesting. In terms of the general model of scientific research in psychology presented in Figure \@ref(fig:scientificmethod) "A Simple Model of Scientific Research in Psychology", these are activities at the “top” of the cycle. In this chapter, we begin with some more basic concepts that are necessary to understand how research questions in psychology are conceptualized.
 
-```{r bruck, echo = FALSE, out.width='25%', fig.align = 'center', fig.cap='Do human figure drawings like this one help children recall information about being touched—for example, in sexual abuse cases? Unfortunately, initial research suggests that they do not. Copyright © 2004 by the American Psychological Association. Reproduced with permission. The official citation that should be used in referencing this material is Aldridge, J., Lamb, M. W., Sternberg, K. J., Orbach, Y., Esplin, P. W., & Bowler, L. (2004). Journal of Consulting and Clinical Psychology, 72, 304–316. The use of APA information does not imply endorsement by the APA.'}
+```{r bruck, echo = FALSE, out.width='25%', fig.align = 'center', fig.cap='Do human figure drawings like this one help children recall information about being touched—for example, in sexual abuse cases? Unfortunately, initial research suggests that they do not. Copyright © 2004 by the American Psychological Association. Reproduced with permission. The official citation that should be used in referencing this material is Aldridge, J., Lamb, M. W., Sternberg, K. J., Orbach, Y., Esplin, P. W., \\& Bowler, L. (2004). Journal of Consulting and Clinical Psychology, 72, 304–316. The use of APA information does not imply endorsement by the APA.'}
 knitr::include_graphics("images/getting-started/bruck.jpeg")
 ```
 
