--- a/13-descriptives.Rmd
+++ b/13-descriptives.Rmd
@@ -273,9 +273,9 @@ grid(nx = NULL, ny = NULL,
      lwd = 1)      # Grid line width
 ```
 
-Such relationships are often presented using line graphs or scatterplots, which show how the level of one variable differs across the range of the other. In the line graph in Figure \@ref(fig:line), for example, each point represents the mean response time for participants with last names in the first, second, third, and fourth quartiles (or quarters) of the name distribution. It clearly shows how response time tends to decline as people’s last names get closer to the end of the alphabet. The scatterplot in Figure \@ref(fig:scatter), which is reproduced from the Measurement chapter, shows the relationship between 25 research methods students’ scores on the Rosenberg Self-Esteem Scale given on two occasions a week apart. Here the points represent individuals, and we can see that the higher students scored on the first occasion, the higher they tended to score on the second occasion. In general, line graphs are used when the variable on the x-axis has (or is organized into) a small number of distinct values, such as the four quartiles of the name distribution. Scatterplots are used when the variable on the x-axis has a large number of values, such as the different possible self-esteem scores.
+Such relationships are often presented using line graphs or scatterplots, which show how the level of one variable differs across the range of the other. In the line graph in Figure \@ref(fig:line), for example, each point represents the mean response time for participants with last names in the first, second, third, and fourth quartiles (or quarters) of the name distribution. It clearly shows how response time tends to decline as people’s last names get closer to the end of the alphabet. The scatterplot in Figure \@ref(fig:scatter2), which is reproduced from the Measurement chapter, shows the relationship between 25 research methods students’ scores on the Rosenberg Self-Esteem Scale given on two occasions a week apart. Here the points represent individuals, and we can see that the higher students scored on the first occasion, the higher they tended to score on the second occasion. In general, line graphs are used when the variable on the x-axis has (or is organized into) a small number of distinct values, such as the four quartiles of the name distribution. Scatterplots are used when the variable on the x-axis has a large number of values, such as the different possible self-esteem scores.
 
-```{r scatter, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Statistical relationship between several college students’ scores on the Rosenberg Self-Esteem Scale given on two occasions a week apart.'}
+```{r scatter2, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Statistical relationship between several college students’ scores on the Rosenberg Self-Esteem Scale given on two occasions a week apart.'}
 y <- c(11,13,13,14,14,15,16,16,17,17,19,16,17,18,20,21,22,20,21,21,24)
 x <- c(12,15,16,16,18,18,18,19,19,20,20,22,23,24,25,26,26,27,27,28,29)
 
@@ -286,11 +286,11 @@ grid(nx = NULL, ny = NULL,
      lwd = 1)      # Grid line width
 ```
 
-The data presented in Figure \@ref(fig:scatter) provide a good example of a positive relationship, in which higher scores on one variable tend to be associated with higher scores on the other (so that the points go from the lower left to the upper right of the graph). The data presented in Figure \@ref(fig:line) provide a good example of a negative relationship, in which higher scores on one variable tend to be associated with lower scores on the other (so that the points go from the upper left to the lower right).
+The data presented in Figure \@ref(fig:scatter2) provide a good example of a positive relationship, in which higher scores on one variable tend to be associated with higher scores on the other (so that the points go from the lower left to the upper right of the graph). The data presented in Figure \@ref(fig:line) provide a good example of a negative relationship, in which higher scores on one variable tend to be associated with lower scores on the other (so that the points go from the upper left to the lower right).
 
-Both of these examples are also linear relationships, in which the points are reasonably well fit by a single straight line. [Nonlinear relationships](#nonlinear-relationship) are those in which the points are better fit by a curved line. Figure \@ref(fig:nonlinear), for example, shows a hypothetical relationship between the amount of sleep people get per night and their level of depression. In this example, the line that best fits the points is a curve—a kind of upside down “U”—because people who get about eight hours of sleep tend to be the least depressed, while those who get too little sleep and those who get too much sleep tend to be more depressed. Nonlinear relationships are not uncommon in psychology, but a detailed discussion of them is beyond the scope of this book.
+Both of these examples are also linear relationships, in which the points are reasonably well fit by a single straight line. [Nonlinear relationships](#nonlinear-relationship) are those in which the points are better fit by a curved line. Figure \@ref(fig:nonlinear2), for example, shows a hypothetical relationship between the amount of sleep people get per night and their level of depression. In this example, the line that best fits the points is a curve—a kind of upside down “U”—because people who get about eight hours of sleep tend to be the least depressed, while those who get too little sleep and those who get too much sleep tend to be more depressed. Nonlinear relationships are not uncommon in psychology, but a detailed discussion of them is beyond the scope of this book.
 
-```{r nonlinear, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Hypothetical nonlinear relationship between sleep and depression.'}
+```{r nonlinear2, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Hypothetical nonlinear relationship between sleep and depression.'}
 y <- c(10,9,8,8,7,6,6,5,7,6,5,7,6,5,9,8,7,7,6,10,9)
 x <- c(4,4,5,6,6,6,7,7,8,8,8,9,9,9,10,10,10,11,11,12,12)
 Data <- data.frame(x, y)
@@ -304,9 +304,9 @@ grid(nx = NULL, ny = NULL,
      lwd = 1)      # Grid line width
 ```
 
-As we saw earlier in the book, the strength of a correlation between quantitative variables is typically measured using a statistic called Pearson’s *r*. As Figure \@ref(fig:pearson) shows, its possible values range from −1.00, through zero, to +1.00. A value of 0 means there is no relationship between the two variables. In addition to his guidelines for interpreting Cohen’s *d*, Cohen offered guidelines for interpreting Pearson’s *r* in psychological research (see Table \@ref(tab:guidelines)). Values near ±.10 are considered small, values near ± .30 are considered medium, and values near ±.50 are considered large. Notice that the sign of Pearson’s *r* is unrelated to its strength. Pearson’s *r* values of +.30 and −.30, for example, are equally strong; it is just that one represents a moderate positive relationship and the other a moderate negative relationship. Like Cohen’s *d*, Pearson’s *r* is also referred to as a measure of “effect size” even though the relationship may not be a causal one.
+As we saw earlier in the book, the strength of a correlation between quantitative variables is typically measured using a statistic called Pearson’s *r*. As Figure \@ref(fig:pearson2) shows, its possible values range from −1.00, through zero, to +1.00. A value of 0 means there is no relationship between the two variables. In addition to his guidelines for interpreting Cohen’s *d*, Cohen offered guidelines for interpreting Pearson’s *r* in psychological research (see Table \@ref(tab:guidelines)). Values near ±.10 are considered small, values near ± .30 are considered medium, and values near ±.50 are considered large. Notice that the sign of Pearson’s *r* is unrelated to its strength. Pearson’s *r* values of +.30 and −.30, for example, are equally strong; it is just that one represents a moderate positive relationship and the other a moderate negative relationship. Like Cohen’s *d*, Pearson’s *r* is also referred to as a measure of “effect size” even though the relationship may not be a causal one.
 
-```{r pearson, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Pearson’s *r* ranges from −1.00 (representing the strongest possible negative relationship), through 0 (representing no relationship), to +1.00 (representing the strongest possible positive relationship).'}
+```{r pearson2, echo = FALSE, out.width='80%', fig.align = 'center', fig.cap='Pearson’s *r* ranges from −1.00 (representing the strongest possible negative relationship), through 0 (representing no relationship), to +1.00 (representing the strongest possible positive relationship).'}
 knitr::include_graphics("images/ch12/pearson.png")
 ```
 
@@ -328,7 +328,7 @@ Table: (\#tab:pearsonmath) Sample computations for Pearson's *r*.
 | $M_X$ = 4.00 |  | $M_Y$ = 40.00 |  | $r$ = 0.53 |
 | $SD_X$ = 1.90 |  | $SD_Y$ = 11.78 |  |  |
 
-There are two common situations in which the value of Pearson’s *r* can be misleading. One is when the relationship under study is nonlinear. Even though Figure \@ref(fig:nonlinear) shows a fairly strong relationship between depression and sleep, Pearson’s *r* would be close to zero because the points in the scatterplot are not well fit by a single straight line. This means that it is important to make a scatterplot and confirm that a relationship is approximately linear before using Pearson’s *r*. The other is when one or both of the variables have a limited range in the sample relative to the population. This is referred to as [restriction of range]. Assume, for example, that there is a strong negative correlation between people’s age and their enjoyment of hip hop music as shown by the scatterplot in Figure \@ref(fig:range). Pearson’s *r* here is −.77. However, if we were to collect data only from 18- to 24-year-olds—represented by the shaded area of Figure \@ref(fig:range)—then the relationship would seem to be quite weak. In fact, Pearson’s *r* for this restricted range of ages is 0. It is a good idea, therefore, to design studies to avoid restriction of range. For example, if age is one of your primary variables, then you can plan to collect data from people of a wide range of ages. Because restriction of range is not always anticipated or easily avoidable, however, it is good practice to examine your data for possible restriction of range and to interpret Pearson’s *r* in light of it. (There are also statistical methods to correct Pearson’s *r* for restriction of range, but they are beyond the scope of this book).
+There are two common situations in which the value of Pearson’s *r* can be misleading. One is when the relationship under study is nonlinear. Even though Figure \@ref(fig:nonlinear2) shows a fairly strong relationship between depression and sleep, Pearson’s *r* would be close to zero because the points in the scatterplot are not well fit by a single straight line. This means that it is important to make a scatterplot and confirm that a relationship is approximately linear before using Pearson’s *r*. The other is when one or both of the variables have a limited range in the sample relative to the population. This is referred to as [restriction of range]. Assume, for example, that there is a strong negative correlation between people’s age and their enjoyment of hip hop music as shown by the scatterplot in Figure \@ref(fig:range). Pearson’s *r* here is −.77. However, if we were to collect data only from 18- to 24-year-olds—represented by the shaded area of Figure \@ref(fig:range)—then the relationship would seem to be quite weak. In fact, Pearson’s *r* for this restricted range of ages is 0. It is a good idea, therefore, to design studies to avoid restriction of range. For example, if age is one of your primary variables, then you can plan to collect data from people of a wide range of ages. Because restriction of range is not always anticipated or easily avoidable, however, it is good practice to examine your data for possible restriction of range and to interpret Pearson’s *r* in light of it. (There are also statistical methods to correct Pearson’s *r* for restriction of range, but they are beyond the scope of this book).
 
 ```{r range, echo = FALSE, out.width='70%', fig.align = 'center', fig.cap='Hypothetical data showing how a strong overall correlation can appear to be weak when one variable has a restricted range. The overall correlation here is −.77, but the correlation for the 18- to 24-year-olds (in the blue box) is 0.'}
 y <- c(6,8,7,8,6,7,7,7,6,8,5,6,4,5,5,5,6,6,6,4,4,4,2,3,5)
@@ -462,7 +462,7 @@ In most cases, the information in a line graph could just as easily be presented
 
 #### Scatterplots {-}
 
-[Scatterplots](#scatterplot) are used to present relationships between quantitative variables when the variable on the x-axis (typically the independent variable) has a large number of levels. Each point in a scatterplot represents an individual rather than the mean for a group of individuals, and there are no lines connecting the points. The graph in Figure \@ref(fig:apabar) is an APA-style version of Figure \@ref(fig:scatter), which illustrates a few additional points. First, when the variables on the x-axis and y-axis are conceptually similar and measured on the same scale—as here, where they are measures of the same variable on two different occasions—this can be emphasized by making the axes the same length. Second, when two or more individuals fall at exactly the same point on the graph, one way this can be indicated is by offsetting the points slightly along the x-axis. Other ways are by displaying the number of individuals in parentheses next to the point or by making the point larger or darker in proportion to the number of individuals. Finally, the straight line that best fits the points in the scatterplot, which is called the regression line, can also be included.
+[Scatterplots](#scatterplot) are used to present relationships between quantitative variables when the variable on the x-axis (typically the independent variable) has a large number of levels. Each point in a scatterplot represents an individual rather than the mean for a group of individuals, and there are no lines connecting the points. The graph in Figure \@ref(fig:apascatter) is an APA-style version of Figure \@ref(fig:scatter2), which illustrates a few additional points. First, when the variables on the x-axis and y-axis are conceptually similar and measured on the same scale—as here, where they are measures of the same variable on two different occasions—this can be emphasized by making the axes the same length. Second, when two or more individuals fall at exactly the same point on the graph, one way this can be indicated is by offsetting the points slightly along the x-axis. Other ways are by displaying the number of individuals in parentheses next to the point or by making the point larger or darker in proportion to the number of individuals. Finally, the straight line that best fits the points in the scatterplot, which is called the regression line, can also be included.
 
 ```{r apascatter, echo = FALSE, out.width='55%', fig.align = 'center', fig.cap='Sample APA-style scatterplot.'}
 knitr::include_graphics("images/ch12/apascatter.png")
