--- a/05-experiments.Rmd
+++ b/05-experiments.Rmd
@@ -146,7 +146,7 @@ participant <- c("**1**","**2**","**3**","4","5","6","**7**","**8**","**9**")
 cond <- c("**A**","**C**","**B**","B","C","A","**C**","**B**","**A**")
 block <- data.frame(participant,cond)
 
-knitr::kable(block, out.width='50%',
+knitr::kable(block,
   col.name=c("Participant","Condition"), caption = 'Block randomization sequence for assigning nine participants to three conditions.')
 ```
 
