--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "Research Methods in Psychology"
 author: "Adapted by Celeste Pilegard"
 date: "Current version rendered `r Sys.Date()`"
 site: bookdown::bookdown_site
-documentclass: book
+documentclass: krantz
 bibliography: [book.bib, packages.bib]
 csl: apa.csl
 url: https://pilegard.github.io/psychmethods/
